--- a/src/style.scss
+++ b/src/style.scss
@@ -15,12 +15,16 @@ body {
   display: flex;
   flex: 1;
   flex-direction: row;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .flex-columns {
   display: flex;
   flex: 1;
   flex-direction: column;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .flex-stretch {
